dev/manifests/dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev
  namespace: apex
  labels:
    app: apex-ctx-sh-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apex-ctx-sh-operator
  template:
    metadata:
      labels:
        app: apex-ctx-sh-operator
    spec:
      serviceAccountName: apex
      containers:
      - name: dev
        image: golang:latest
        imagePullPolicy: Never
        workingDir: /usr/src/app
        command:
          - sleep
          - infinity
        ports:
          - containerPort: 9090
          - containerPort: 9443
        volumeMounts:
          - name: app
            mountPath: /usr/src/app
          - name: tls
            mountPath: "/etc/admission-webhook/tls"
            readOnly: true
      volumes:
      - name: app
        hostPath:
          path: /app
      - name: tls
        secret:
          secretName: apex-ctx-sh-webhook-tls
