dev/manifests/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apex-ctx-sh-operator
  name: apex-ctx-sh-webhook
  namespace: apex
spec:
  type: NodePort
  ports:
    - port: 9443
      protocol: TCP
      targetPort: 9443
      nodePort: 30100
  selector:
    app: apex-ctx-sh-operator
