dev/manifests/webhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: apex-ctx-sh-webhook
      namespace: apex
      path: /mutate-apex-ctx-sh-v1-scraper
      port: 9443
    caBundle: |
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMwakNDQWJvQ0NRREY4b1B0dDY2TWRqQU5CZ2tx
[...]
      IENFUlRJRklDQVRFLS0tLS0K
  failurePolicy: Fail
  name: mscraper.apex.ctx.sh
  rules:
  - apiGroups:
    - apex.ctx.sh
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - scrapers
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: apex-ctx-sh-webhook
      namespace: apex
      path: /validate-apex-ctx-sh-v1-scraper
      port: 9443
    caBundle: |
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMwakNDQWJvQ0NRREY4b1B0dDY2TWRqQU5CZ2tx
[...]
      IENFUlRJRklDQVRFLS0tLS0K
  failurePolicy: Fail
  name: vscraper.apex.ctx.sh
  rules:
  - apiGroups:
    - apex.ctx.sh
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - scraper
  sideEffects: None
